# MultimodalRetrieval

./: .gitignore  README.md  pyproject.toml
end2end_proj/backend/: requirements.txt
end2end_proj/frontend/: package-lock.json
end2end_proj/frontend/src/compoents/: Fileform.js
end2end_proj/frontend/src/pages/: index.js
retrieval/indexes/: .gitignore  imageIndex.bin.dvc  textIndex.bin.dvc
